@@ -182,6 +182,11 @@ const gremlins = {
     g_VX3X_repeatXout_order_byXperformances_descX_limitX5X_tailX1XX_timesX2X_valuesXnameX: [function({g, vid3}) { return g.V(vid3).repeat(__.out().order().by("performances", Order.desc).limit(5).tail(1)).times(2).values("name") }], 
     g_VX3X_repeatXoutE_order_byXweightX_tailX2X_inVX_timesX2X_valuesXnameX: [function({g, vid3}) { return g.V(vid3).repeat(__.outE().order().by("weight").tail(2).inV()).times(2).values("name") }], 
     g_VX3X_repeatXoutE_order_byXweight_descX_limitX2X_inVX_timesX2X_valuesXnameX: [function({g, vid3}) { return g.V(vid3).repeat(__.outE().order().by("weight", Order.desc).limit(2).inV()).times(2).values("name") }], 
+    g_V_emit_repeatXout_order_byXnameXX_timesX2X_valuesXnameX: [function({g}) { return g.V().emit().repeat(__.out().order().by("name")).times(2).values("name") }], 
+    g_V_emitXhasLabelXpersonXX_repeatXout_order_byXnameXX_timesX2X_valuesXnameX: [function({g}) { return g.V().emit(__.hasLabel("person")).repeat(__.out().order().by("name")).times(2).values("name") }], 
+    g_V_untilXloops_isX2XX_repeatXout_order_byXnameXX_valuesXnameX: [function({g}) { return g.V().until(__.loops().is(2)).repeat(__.out().order().by("name")).values("name") }], 
+    g_V_emit_repeatXdedupX_timesX1X: [function({g}) { return g.V().emit().repeat(__.dedup()).times(1) }], 
+    g_V_emit_repeatXdedupX_timesX2X: [function({g}) { return g.V().emit().repeat(__.dedup()).times(2) }], 
     g_unionXX: [function({g}) { return g.union() }], 
     g_unionXV_name: [function({g}) { return g.union(__.V().values("name")) }], 
     g_unionXVXv1X_VX4XX_name: [function({g, vid4, vid1}) { return g.union(__.V(vid1), __.V(vid4)).values("name") }], 
