@@ -154,6 +154,11 @@ world.gremlins = {
     'g_VX3X_repeatXout_order_byXperformances_descX_limitX5X_tailX1XX_timesX2X_valuesXnameX': [(lambda g, vid3=None:g.V(vid3).repeat(__.out().order().by('performances', Order.desc).limit(5).tail(1)).times(2).values('name'))], 
     'g_VX3X_repeatXoutE_order_byXweightX_tailX2X_inVX_timesX2X_valuesXnameX': [(lambda g, vid3=None:g.V(vid3).repeat(__.out_e().order().by('weight').tail(2).in_v()).times(2).values('name'))], 
     'g_VX3X_repeatXoutE_order_byXweight_descX_limitX2X_inVX_timesX2X_valuesXnameX': [(lambda g, vid3=None:g.V(vid3).repeat(__.out_e().order().by('weight', Order.desc).limit(2).in_v()).times(2).values('name'))], 
+    'g_V_emit_repeatXout_order_byXnameXX_timesX2X_valuesXnameX': [(lambda g:g.V().emit().repeat(__.out().order().by('name')).times(2).values('name'))], 
+    'g_V_emitXhasLabelXpersonXX_repeatXout_order_byXnameXX_timesX2X_valuesXnameX': [(lambda g:g.V().emit(__.has_label('person')).repeat(__.out().order().by('name')).times(2).values('name'))], 
+    'g_V_untilXloops_isX2XX_repeatXout_order_byXnameXX_valuesXnameX': [(lambda g:g.V().until(__.loops().is_(2)).repeat(__.out().order().by('name')).values('name'))], 
+    'g_V_emit_repeatXdedupX_timesX1X': [(lambda g:g.V().emit().repeat(__.dedup()).times(1))], 
+    'g_V_emit_repeatXdedupX_timesX2X': [(lambda g:g.V().emit().repeat(__.dedup()).times(2))], 
     'g_unionXX': [(lambda g:g.union())], 
     'g_unionXV_name': [(lambda g:g.union(__.V().values('name')))], 
     'g_unionXVXv1X_VX4XX_name': [(lambda g, vid4=None,vid1=None:g.union(__.V(vid1), __.V(vid4)).values('name'))], 
