@@ -152,6 +152,9 @@ public abstract class RemoteWorld implements World {
                 case "g_VX3X_repeatXout_order_byXperformancesX_tailX3X_limitX1XX_timesX2X_valuesXnameX":
                 case "g_VX250X_repeatXout_localXorder_byXperformancesX_tailX1XXX_timesX2X_valuesXnameX":
                 case "g_VX3X_repeatXout_order_byXperformancesX_tailX2XX_timesX2X_valuesXnameX":
+                case "g_V_emit_repeatXout_order_byXnameXX_timesX2X_valuesXnameX":
+                case "g_V_emitXhasLabelXpersonXX_repeatXout_order_byXnameXX_timesX2X_valuesXnameX":
+                case "g_V_untilXloops_isX2XX_repeatXout_order_byXnameXX_valuesXnameX":
                     throw new AssumptionViolatedException("GraphComputer doesn't order within repeat");
                 // TINKERPOP-3209
                 case "g_V_localXgroupCountXaX_selectXaX_countXlocalXX":
